<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="@dimen/_370dp"
        android:layout_height="@dimen/_250dp"
        android:layout_marginBottom="@dimen/_30dp"
        android:background="@drawable/paper"
        app:layout_constraintBottom_toTopOf="@+id/iv_dzikir_pagi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_judul_dalil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_60dp"
            android:fontFamily="@font/poppins"
            android:text="@string/text_dalil_dzikir_pagi_petang"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_90dp"
            android:fontFamily="@font/aaa_golden_arab"
            android:text="@string/tv_dalil_arab"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_175dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:text="@string/text_al_ahzab_42"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_135dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:text="@string/tv_arti_dalil"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sp"
            android:textStyle="italic" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/iv_dzikir_pagi"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_300dp"
        android:layout_marginTop="@dimen/_200dp"
        android:layout_marginEnd="@dimen/_200dp"
        android:elevation="@dimen/_10dp"
        android:src="@drawable/logo_pagi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/contdesc" />

    <ImageView
        android:id="@+id/iv_dzikir_petang"
        android:layout_width="@dimen/_190dp"
        android:layout_height="@dimen/_300dp"
        android:layout_marginStart="@dimen/_10dp"
        android:src="@drawable/logo_petang"
        app:layout_constraintBottom_toBottomOf="@+id/iv_dzikir_pagi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_dzikir_pagi"
        app:layout_constraintTop_toTopOf="@+id/iv_dzikir_pagi"
        android:contentDescription="@string/contdesc" />

    <TextView
        android:id="@+id/tv_dzikir_pagi"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_40dp"
        android:background="@drawable/ic_dzikir_pagi"
        android:elevation="@dimen/_100dp"
        android:fontFamily="@font/awal_ramadhan"
        android:gravity="center"
        android:paddingTop="@dimen/_8dp"
        android:text="@string/text_dzikir_pagi"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_28sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_dzikir_pagi"
        app:layout_constraintEnd_toEndOf="@+id/iv_dzikir_pagi"
        app:layout_constraintStart_toStartOf="@+id/iv_dzikir_pagi"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/tv_dzikir_petang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@drawable/ic_dzikir_petang"
        android:fontFamily="@font/awal_ramadhan"
        android:gravity="center"
        android:paddingTop="@dimen/_8dp"
        android:text="@string/text_dzikir_petang"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_28sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_dzikir_petang"
        app:layout_constraintEnd_toEndOf="@+id/iv_dzikir_petang"
        app:layout_constraintStart_toEndOf="@+id/iv_dzikir_pagi"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <LinearLayout
        android:id="@+id/ll_keutamaan_dzikir"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40dp"
        android:background="@drawable/rectangle"
        android:elevation="@dimen/_5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_dzikir_pagi">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35dp"
            android:layout_marginTop="@dimen/_6dp"
            android:fontFamily="@font/poppins"
            android:text="@string/text_keutamaan_dzikir_pagi_petang"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/_25dp"
            android:layout_height="@dimen/_25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:src="@drawable/ic_arrow"
            android:contentDescription="@string/contdesc" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>